--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 i# database personal config
 database.properties
-application personal config
+# application personal config
 application.properties
 
 lecture
