[#16] 게시물 수정,파일 삭제 후 재업로드, vo생성

--- a/shoes-issue-backend/src/main/webapp/WEB-INF/web.xml
+++ b/shoes-issue-backend/src/main/webapp/WEB-INF/web.xml
@@ -60,7 +60,7 @@
 	</filter-mapping>
 	
 	<multipart-config>
-		<location>C:\\fileTest</location>
+		<location>C:\Users\KOSA\git\shose-issue-frontend\images</location>
 		<max-file-size>20971520</max-file-size>
 		<max-request-size>41943040</max-request-size>
 		<file-size-threshold>20971520</file-size-threshold>
