닉네임 보이기

--- a/shoes-issue-backend/src/main/resources/config/imageDirectory.properties
+++ b/shoes-issue-backend/src/main/resources/config/imageDirectory.properties
@@ -1,1 +1,1 @@
-directory=C:/Users/KOSA/git/shoes-issue-frontend-vuetify/public/images/tradeBoard
+directory=C:\Users\Eunseo\git\shoes-issue-frontend-vuetify\public\images\tradeBoard
